# autonomous-driving-ppo

./: .gitignore  CHANGELOG.md  INSTALL.md  MIGRATION_GUIDE.md  QUICKSTART.md  README.md  environment.yml  environment_mac.yml  project_report.md  pyproject.toml  requirements.txt
envs/: intersection_env.py  sumo_env.py  sumo_env_s1.py  sumo_env_s2.py
maps/: sf_mission.net.xml  sf_mission.net_stage1.rou.xml  sf_mission.net_stage2.rou.xml  sf_mission.net_stage3.rou.xml  sf_mission.net_stage4.rou.xml
outputs/: eval_stage1_results.json  eval_stage2_results.json  eval_stage3_results.json
outputs/logs/PPO_1/: events.out.tfevents.1766997685.77223a78ed0b.3901.0
outputs/logs/PPO_2/: events.out.tfevents.1766998030.77223a78ed0b.7074.0
outputs/logs/stage1/PPO_1/: events.out.tfevents.1767009779.77223a78ed0b.7074.1
outputs/logs/stage1/PPO_2/: events.out.tfevents.1767012627.fe482de9c74f.174.0
outputs/logs/stage1/PPO_3/: events.out.tfevents.1767019967.d1fa71f3f1a6.2482.0
scripts/: check_progress.py  debug_traffic_light_v4.py  download_map.py  evaluate_local.py  evaluate_sumo.py  profile_env.py  profile_stages.py  sumo_env_v2_strict.py  test_rule_based.py  train_multistage.py  train_sumo.py  verify_fix.py  visualize.py  visualize_local.py
utils/: callbacks.py  llm_advisor.py  reward_logger.py
