[project]
name = "rl-driving"
version = "0.1.0"
description = "Reinforcement Learning Autonomous Driving"
requires-python = ">=3.10"
dependencies = [
    "stable-baselines3[extra]>=2.0.0",
    "gymnasium>=0.28.0",
    "highway-env>=1.8.0",
    "tensorboard>=2.13.0",
    "torch>=2.0.0",
    "numpy",
    "matplotlib",
    "opencv-python",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
